# JARVIS-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  intent_router.py  main.py  prompts.py  tools.py
agent/clients/: cli_client.py  mcp_client.py  rag_client.py
api/: Dockerfile  deps.py  main.py
api/routers/: auth.py  conversations.py  documents.py  health.py  integrations.py  livekit.py  settings.py
cli_bridge/: Dockerfile  config.py  main.py  runner.py  streaming.py
mcp_gateway/: Dockerfile  auth_manager.py  gateway.py  main.py  registry.py
rag/: Dockerfile  db.py  embeddings.py  ingest.py  main.py  search.py
shared/: auth.py  config.py  models.py  redis_client.py  supabase_client.py
tests/: conftest.py
tests/test_api/: test_health.py
